--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,9 @@ body{
     background-image: linear-gradient(to right,skyblue,skyblue, gray);
 
 }
-
+.body{
+    background-image: linear-gradient(to left, red, orange, yellow);
+}
 
 h1{
     color: rgb(70, 68, 68);
@@ -70,4 +72,13 @@ button{
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.play .container {
+    display: flex;
+    flex-direction: column;
+}
+.play .container .choice{
+    border: 5px rgb(145, 255, 0) solid;
+    border-radius: 25px;
 }
