--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,19 @@ button{
     border: 5px rgb(145, 255, 0) solid;
     border-radius: 25px;
 }
+
+.nav{
+    align-self: flex-start;
+    padding: 15px;
+}
+.nav .container .return{
+    text-decoration: none;
+    font-size: 18px;
+    padding: 5px;
+    color: aliceblue;
+    border: 2px solid green ;
+    border-radius: 10px;
+    background-color: rgb(73, 77, 77);
+
+   
+}
