--- a/css/style.css
+++ b/css/style.css
@@ -32,25 +32,30 @@ h1{
 }
 
 .header {
-    height: 50px;
+    height: 30%;
+    margin-bottom: -50px;
+    border-collapse: collapse;
 }
 .header .container{
     display: flex;
     height: 100%;
     flex-direction: column;
     justify-content: center;
-    flex-wrap: wrap;
     align-items: center;
     padding-top: 20px;
+    margin-bottom: 100px;
 }
 
 .footer{
+    border-collapse: collapse;
+    height: 30%;
     display: flex;
     align-items: flex-end;
     padding-bottom: 50px;
 }
 
 .gamePlay .container{
+    height: 100%;
     height:200px;
     display: flex;
     align-items: center;
@@ -67,8 +72,14 @@ button{
 .header, .gamePlay, .footer{
     flex: 1;
 }
+.play{
+    border-collapse: collapse;
+    margin-bottom: 50px;
+    height: 20%;
+}
 
 .play .container{
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -84,6 +95,7 @@ button{
 }
 
 .nav{
+    height: 10%;
     align-self: flex-start;
     padding: 15px;
 }
