--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,16 @@ button{
 }
 
 .choice:hover{
+    background:rgb(6, 160, 221);
+    color: auto;
+}
+.click{
+    border-radius:25px;
+    border:5px solid rgb(95, 11, 11);
+}
+.click:hover{
     background: red;
-    color: black;
+    
 }
 
 button:hover{
